fix: modal, scrollbar flex css

--- a/src/components/modal/scss/index.scss
+++ b/src/components/modal/scss/index.scss
@@ -3,6 +3,7 @@
 @use './variables.scss';
 
 .modal {
+    margin: auto;
     transition:
         opacity var(--transition-duration) ease-in-out,
         transform var(--transition-duration) ease-in-out;
